--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
       input:focus {
         outline: none;
       }
+      input::placeholder {
+        color: rgb(187, 225, 250);
+        text-align: center;
+      }
+      button:hover {
+        filter: brightness(1.2);
+      }
     </style>
   </head>
 
@@ -16,28 +23,31 @@
       transform: scale(2.3);
       transform-origin: top;
       font-family: 'Segoe UI', sans-serif;
+      background-color: rgb(187, 225, 250);
     "
   >
     <div
       style="
         display: flex;
         flex-direction: column;
-        justify-content: start;
+        justify-content: space-evenly;
         align-items: center;
-        background-color: blue;
+        background-color: rgb(50, 130, 184);
         border-radius: 7px;
         width: 600px;
-        height: 110px;
+        height: 120px;
         margin: auto;
       "
     >
       <div
         style="
           width: 200px;
-          height: 70px;
+          height: 65px;
           display: flex;
           justify-content: center;
           align-items: center;
+          background-color: rgb(15, 76, 117);
+          border-radius: 7px;
         "
       >
         <button
@@ -47,10 +57,11 @@
             width: 60px;
             height: 60px;
             border-radius: 7px;
-            background-color: white;
-            color: blue;
-            font-size: 8px;
+            background-color: rgb(27, 38, 44);
+            color: rgb(187, 225, 250);
+            font-size: 7px;
             font-weight: 800;
+            cursor: pointer;
           "
         >
           INCREMENT
@@ -63,7 +74,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            color: white;
+            color: rgb(187, 225, 250);
             font-weight: 700;
             font-size: 30px;
           "
@@ -77,38 +88,67 @@
             width: 60px;
             height: 60px;
             border-radius: 7px;
-            background-color: white;
-            color: blue;
-            font-size: 8px;
+            background-color: rgb(27, 38, 44);
+            color: rgb(187, 225, 250);
+            font-size: 7px;
             font-weight: 800;
+            cursor: pointer;
           "
         >
           RESET
         </button>
       </div>
 
-      <div style="display: flex; align-items: center; justify-content: center">
+      <div
+        style="
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          width: 270px;
+          height: 20px;
+          border-radius: 7px;
+          background-color: rgb(15, 76, 117);
+        "
+      >
         <input
           type="text"
           id="input"
-          placeholder="please enter at least 3 chars"
+          placeholder="ENTER YOUR NAME"
+          style="
+            border-style: none;
+            background-color: rgb(15, 76, 117);
+            color: rgb(187, 225, 250);
+            text-align: center;
+            font-weight: 600;
+            height: 20px;
+            width: 100%;
+            padding-block: 0;
+            padding-inline: 0;
+            margin-left: 6px;
+            padding: 0;
+            border-right: rgb(50, 130, 184) solid 2px;
+          "
         />
         <button
           id="subButton"
           type="button"
           style="
-            width: 30px;
-            height: 19px;
+            width: 70px;
+            height: 20px;
             margin: 0 0;
             color: blue;
-            font-size: 9px;
-            font-weight: 500;
+            font-size: 10px;
+            font-weight: 700;
             text-align: end;
             padding: 0;
             text-align: center;
+            background-color: rgb(27, 38, 44);
+            border-radius: 0 7px 7px 0;
+            color: rgb(187, 225, 250);
+            cursor: pointer;
           "
         >
-          submit
+          SUBMIT
         </button>
       </div>
 
@@ -118,9 +158,17 @@
           display: flex;
           justify-content: center;
           align-items: center;
-          color: white;
+          margin: 0 0;
+          background-color: rgb(15, 76, 117);
+          width: 270px;
+          height: 20px;
+          border-radius: 7px;
+          font-weight: 600;
+          color: rgb(187, 225, 250);
         "
-      ></div>
+      >
+        _ _ _ _ _
+      </div>
     </div>
     <script src="main.js" type="module"></script>
   </body>
