changed first obj css

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
     >
       <div
         style="
-          width: 200px;
-          height: 65px;
+          width: 270px;
+          height: 20px;
           display: flex;
-          justify-content: center;
+          justify-content: space-between;
           align-items: center;
           background-color: rgb(15, 76, 117);
           border-radius: 7px;
@@ -54,13 +54,18 @@
           id="increment"
           type="button"
           style="
-            width: 60px;
-            height: 60px;
-            border-radius: 7px;
+            width: 70px;
+            height: 20px;
+            margin: 0 0;
+            color: blue;
+            font-size: 10px;
+            font-weight: 700;
+            text-align: end;
+            padding: 0;
+            text-align: center;
             background-color: rgb(27, 38, 44);
+            border-radius: 7px 0 0 7px;
             color: rgb(187, 225, 250);
-            font-size: 7px;
-            font-weight: 800;
             cursor: pointer;
           "
         >
@@ -69,14 +74,16 @@
         <div
           id="display"
           style="
-            width: 60px;
-            height: 60px;
+            width: 126px;
+            height: 22px;
             display: flex;
             justify-content: center;
             align-items: center;
             color: rgb(187, 225, 250);
             font-weight: 700;
-            font-size: 30px;
+            font-size: 25px;
+            border-right: rgb(50, 130, 184) solid 2px;
+            border-left: rgb(50, 130, 184) solid 2px;
           "
         >
           0
@@ -85,13 +92,18 @@
           id="reset"
           type="button"
           style="
-            width: 60px;
-            height: 60px;
-            border-radius: 7px;
+            width: 70px;
+            height: 20px;
+            margin: 0 0;
+            color: blue;
+            font-size: 10px;
+            font-weight: 700;
+            text-align: end;
+            padding: 0;
+            text-align: center;
             background-color: rgb(27, 38, 44);
+            border-radius: 0 7px 7px 0;
             color: rgb(187, 225, 250);
-            font-size: 7px;
-            font-weight: 800;
             cursor: pointer;
           "
         >
