changed variable names

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       >
         <input
           type="text"
-          id="input"
+          id="userInput"
           placeholder="ENTER YOUR NAME"
           style="
             border-style: none;
@@ -142,7 +142,7 @@
           "
         />
         <button
-          id="subButton"
+          id="submitButton"
           type="button"
           style="
             width: 70px;
